Add reader & writer